Initial import from Agora's repository
This code was copied almost verbatim from Agora.
The only difference is that import / module statements were modified,
and documentation / examples were added.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,16 @@
 docs.json
 __dummy.html
 docs/
+*-test-library
+# Since this is a library, we ignore `dub.selections.json`.
+# It only matters when used with an application.
+dub.selections.json
 
 # Code coverage
 *.lst
+
+# Emacs
+*~
+
+# Examples binary
+examples/helloworld/helloworld
